terraform/modules/vpc/subnets.tf

# ------ Public Subnets (ALB, NAT)
resource "aws_subnet" "public" {
  count = length(var.availability_zones)

  vpc_id = aws_vpc.main.id
  cidr_block = var.public_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]
  map_public_ip_on_launch = true

  tags = merge(var.tags, {
    Name =  "${var.name_prefix}-public-subnet-${var.availability_zones[count.index]}"
    Tier = "public"
    "kubernetes.io/role/elb" = "1"
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
  })
}


# ---- Private Subnets
resource "aws_subnet" "private" {
  count = length(var.availability_zones)

  vpc_id = aws_vpc.main.id
  cidr_block = var.private_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]

  tags = merge(var.tags, {
    Name = "${var.name_prefix}-private-subnet-${var.availability_zones[count.index]}"
    Tier = "private"
    "kubernetes.io/role/internal-elb" = "1"
    "kubernetes.io/cluster/${var.cluster_name}" = "owned"
  })
}

# ------ Database Subnets (RDS) -----
resource "aws_subnet" "database" {
  count = length(var.availability_zones)

  vpc_id = aws_vpc.main.id
  cidr_block = var.database_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]

  tags = merge(var.tags,  {
    Name = "${var.name_prefix}-database-subnet-${var.availability_zones[count.index]}"
    Tier = "database"
  })
}
